perf(core): prepare batch responses on lanes and skip idle completion pumps